[package]
name = "players"
version = "0.1.1"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "players"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang =  { version = "0.1.4", git = "https://github.com/magicblock-labs/bolt.git" }
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "0f60909" }
